# teleport-upgrade-ansible

./: .gitlab-ci.yml  Makefile  README.md  cicd_vars.sh  deploy.sh  hosts.yaml  hosts.yml  pyproject.toml  upgrader.yml
roles/teleport/handlers/: main.yml
roles/teleport/tasks/: main.yml
