[tool.poetry]
name = "teleport-upgrade-ansible"
version = "0.1.0"
description = ""
authors = ["smatflow"]
readme = "README.md"
packages = [{include = "teleport_upgrade_ansible"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
